# physical-ai-textbook

./: .gitignore  README.md  curriculum.yaml  prompt.md  question.md  rag.md
.claude/: settings.local.json
.claude/constitution/: physical-ai-textbook.md
.claude/skills/: code-generator-robotics.json
.claude/tasks/: physical-ai-textbook-tasks.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env  README.md  config.py  constitution.md  ingest.py  main.py  pyproject.toml  requirements.txt  utils.py
backend-RAG/: 1_crawl.py  2_embed_and_upload.py  crawl.py  embed_and_upload.py  main.py  pyproject.toml  test_chat.py  test_chat_agents.py
backend-RAG/data/: book_pages.json  book_texts.json  raw_texts.json
backend-auth/: .gitignore  README.md  auth-schema.ts  auth.config.ts  create-users-table.js  details.md  drizzle.config.better-auth.ts  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
backend-auth/api/: _root.ts  auth.ts  index.ts
backend-auth/better-auth_migrations/: 2025-12-28T00-04-24.915Z.sql  2025-12-28T00-54-13.383Z.sql
backend-auth/scripts/: add-test-users.js  check-and-seed.js  check-tables.js  check-users.js  fix-and-seed-final.js  fix-and-seed.js  seed-db-sql.js  seed-db.js  verify-data.js
backend-auth/src/: auth-schema.ts  auth.ts  schema.ts  server.ts
backend/data/: book_pages.json
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
frontend/docs/: 00-ADR.md  00-PLAN.md  week1-intro.md  week2-embodied-intelligence.md
frontend/plugins/: api-rewrite-plugin.ts
(+306 files in other folders)
